Apply the wrappers