@@ -10,11 +10,11 @@ import androidx.lifecycle.LifecycleOwner;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.thoughtcrime.securesms.R;
 import org.thoughtcrime.securesms.recipients.Recipient;
+import org.thoughtcrime.securesms.util.StreamUtils;
 
 import java.util.List;
 
@@ -82,7 +82,7 @@ public final class GroupMemberListView extends RecyclerView {
   }
 
   public void setDisplayOnlyMembers(@NonNull List<Recipient> recipients) {
-    membersAdapter.updateData(Stream.of(recipients).map(r -> new GroupMemberEntry.FullMember(r, false)).collect(Collectors.toList()));
+    membersAdapter.updateData(StreamUtils.StreamOfCollection(recipients).map(r -> new GroupMemberEntry.FullMember(r, false)).toList());
   }
 
   @Override
