@@ -19,6 +19,7 @@ import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.recipients.RecipientUtil;
 import org.thoughtcrime.securesms.transport.RetryLaterException;
 import org.thoughtcrime.securesms.util.GroupUtil;
+import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.crypto.ContentHint;
 import org.whispersystems.signalservice.api.crypto.UntrustedIdentityException;
 import org.whispersystems.signalservice.api.messages.SendMessageResult;
@@ -61,9 +62,10 @@ public class GroupCallUpdateSendJob extends BaseJob {
       throw new AssertionError("We have a recipient, but it's not a V2 Group");
     }
 
-    List<RecipientId> recipientIds = Stream.of(RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds())))
-                                           .filter(recipient -> !recipient.isSelf())
-                                           .map(Recipient::getId).collect(com.annimon.stream.Collectors.toList());
+    List<RecipientId> recipientIds = StreamUtils.StreamOfCollection(RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds())))
+                                           .filterNot(Recipient::isSelf)
+                                           .map(Recipient::getId)
+                                           .toList();
 
     return new GroupCallUpdateSendJob(recipientId,
                                       eraId,
@@ -126,7 +128,7 @@ public class GroupCallUpdateSendJob extends BaseJob {
       return;
     }
 
-    List<Recipient> destinations = Stream.of(recipients).map(Recipient::resolved).collect(com.annimon.stream.Collectors.toList());
+    List<Recipient> destinations = StreamUtils.StreamOfCollection(recipients).map(Recipient::resolved).toList();
     List<Recipient> completions  = deliver(conversationRecipient, destinations);
 
     for (Recipient completion : completions) {
