@@ -16,10 +16,10 @@ import org.thoughtcrime.securesms.jobmanager.Job;
 import org.thoughtcrime.securesms.keyvalue.SignalStore;
 import org.thoughtcrime.securesms.mms.OutgoingMessage;
 import org.signal.core.util.Util;
+import org.thoughtcrime.securesms.util.StreamUtils;
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 public abstract class SendJob extends BaseJob {
@@ -50,8 +50,8 @@ public abstract class SendJob extends BaseJob {
     List<Attachment> attachments = new LinkedList<>();
 
     attachments.addAll(message.getAttachments());
-    attachments.addAll(Stream.of(message.getLinkPreviews()).map(lp -> lp.getThumbnail().orElse(null)).filter(Objects::nonNull).collect(com.annimon.stream.Collectors.toList()));
-    attachments.addAll(Stream.of(message.getSharedContacts()).map(Contact::getAvatarAttachment).filter(Objects::nonNull).collect(com.annimon.stream.Collectors.toList()));
+    attachments.addAll(StreamUtils.StreamOfCollection(message.getLinkPreviews()).map(lp -> lp.getThumbnail().orElse(null)).withoutNulls().toList());
+    attachments.addAll(StreamUtils.StreamOfCollection(message.getSharedContacts()).map(Contact::getAvatarAttachment).withoutNulls().toList());
 
     if (message.getOutgoingQuote() != null && message.getOutgoingQuote().getAttachment() != null) {
       attachments.add(message.getOutgoingQuote().getAttachment());
