@@ -4,7 +4,7 @@ import androidx.annotation.NonNull;
 import androidx.annotation.WorkerThread;
 
 import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
+import com.annimon.stream.ComparatorCompat;
 
 import org.signal.core.util.MapUtil;
 import org.signal.core.util.logging.Log;
@@ -15,6 +15,7 @@ import org.thoughtcrime.securesms.payments.ReconstructedPayment;
 import org.thoughtcrime.securesms.payments.State;
 import org.thoughtcrime.securesms.payments.history.TransactionReconstruction;
 import org.thoughtcrime.securesms.payments.proto.PaymentMetaData;
+import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.payments.Money;
 
 import java.util.ArrayList;
@@ -52,7 +53,7 @@ public final class LedgerReconcile {
   private static @NonNull List<Payment> reconcile(@NonNull Collection<? extends Payment> allLocalPaymentTransactions,
                                                   @NonNull List<MobileCoinLedgerWrapper.OwnedTxo> allTxOuts)
   {
-    List<? extends Payment> nonFailedLocalPayments = Stream.of(allLocalPaymentTransactions).filter(i -> i.getState() != State.FAILED).collect(Collectors.toList());
+    List<? extends Payment> nonFailedLocalPayments = StreamUtils.StreamOfCollection(allLocalPaymentTransactions).filter(i -> i.getState() != State.FAILED).toList();
     Set<ByteString>         allKnownPublicKeys     = new HashSet<>(nonFailedLocalPayments.size());
     Set<ByteString>         allKnownKeyImages      = new HashSet<>(nonFailedLocalPayments.size());
 
@@ -63,11 +64,11 @@ public final class LedgerReconcile {
       allKnownKeyImages.addAll(txoIdentification.keyImages);
     }
 
-    Set<MobileCoinLedgerWrapper.OwnedTxo> knownTxosByKeyImage = Stream.of(allTxOuts)
+    Set<MobileCoinLedgerWrapper.OwnedTxo> knownTxosByKeyImage = StreamUtils.StreamOfCollection(allTxOuts)
                                                                       .filter(t -> allKnownKeyImages.contains(t.getKeyImage()))
                                                                       .collect(Collectors.toSet());
 
-    Set<MobileCoinLedgerWrapper.OwnedTxo> knownTxosByPublicKeys = Stream.of(allTxOuts)
+    Set<MobileCoinLedgerWrapper.OwnedTxo> knownTxosByPublicKeys = StreamUtils.StreamOfCollection(allTxOuts)
                                                                         .filter(t -> allKnownPublicKeys.contains(t.getPublicKey()))
                                                                         .collect(Collectors.toSet());
 
@@ -76,11 +77,11 @@ public final class LedgerReconcile {
     unknownTxOutsReceived.removeAll(knownTxosByPublicKeys);
 
     // any TXO that we can't pair up the keyimage for, we don't have detail for how it got spent
-    Set<MobileCoinLedgerWrapper.OwnedTxo> unknownTxOutsSpent = Stream.of(allTxOuts).filter(MobileCoinLedgerWrapper.OwnedTxo::isSpent).collect(Collectors.toSet());
+    Set<MobileCoinLedgerWrapper.OwnedTxo> unknownTxOutsSpent = StreamUtils.StreamOfCollection(allTxOuts).filter(MobileCoinLedgerWrapper.OwnedTxo::isSpent).collect(Collectors.toSet());
     unknownTxOutsSpent.removeAll(knownTxosByKeyImage);
 
     if (unknownTxOutsReceived.isEmpty() && unknownTxOutsSpent.isEmpty()) {
-      return Stream.of(allLocalPaymentTransactions).map(t -> (Payment) t).collect(Collectors.toList());
+      return StreamUtils.StreamOfCollection(allLocalPaymentTransactions).map(t -> (Payment) t).toList();
     }
 
     List<DetailedTransaction> detailedTransactions = reconstructAllTransactions(unknownTxOutsReceived, unknownTxOutsSpent);
@@ -169,8 +170,9 @@ public final class LedgerReconcile {
   public static class DetailedTransaction {
     private static final Comparator<DetailedTransaction> BLOCK_INDEX = (a, b) -> BlockDetail.BLOCK_INDEX.compare(a.blockDetail, b.blockDetail);
     private static final Comparator<DetailedTransaction> TRANSACTION = (a, b) -> TransactionReconstruction.Transaction.ORDER.compare(a.transaction, b.transaction);
-    public static final  Comparator<DetailedTransaction> ASCENDING   = BLOCK_INDEX.thenComparing(TRANSACTION);
-    public static final  Comparator<DetailedTransaction> DESCENDING  = ASCENDING.reversed();
+    public static final  Comparator<DetailedTransaction> ASCENDING   = ComparatorCompat.chain(BLOCK_INDEX)
+                                                                                       .thenComparing(TRANSACTION);
+    public static final  Comparator<DetailedTransaction> DESCENDING  = ComparatorCompat.reversed(ASCENDING);
 
     private final BlockDetail blockDetail;
 
@@ -184,23 +186,23 @@ public final class LedgerReconcile {
   }
 
   private static @NonNull List<DetailedTransaction> reconstructAllTransactions(@NonNull Set<MobileCoinLedgerWrapper.OwnedTxo> unknownReceived, @NonNull Set<MobileCoinLedgerWrapper.OwnedTxo> unknownSpent) {
-    Set<Long> allBlocksWithActivity = Stream.of(unknownReceived)
+    Set<Long> allBlocksWithActivity = StreamUtils.StreamOfCollection(unknownReceived)
                                             .map(MobileCoinLedgerWrapper.OwnedTxo::getReceivedInBlock)
                                             .collect(Collectors.toSet());
 
     allBlocksWithActivity
-            .addAll(Stream.of(unknownSpent)
-                          .map(MobileCoinLedgerWrapper.OwnedTxo::getSpentInBlock)
-                          .collect(Collectors.toSet()));
+            .addAll(StreamUtils.StreamOfCollection(unknownSpent)
+                               .map(MobileCoinLedgerWrapper.OwnedTxo::getSpentInBlock)
+                               .collect(Collectors.toSet()));
 
-    Map<Long, List<MobileCoinLedgerWrapper.OwnedTxo>> receivedInBlock = Stream.of(unknownReceived)
+    Map<Long, List<MobileCoinLedgerWrapper.OwnedTxo>> receivedInBlock = StreamUtils.StreamOfCollection(unknownReceived)
                                                                               .collect(Collectors.groupingBy(MobileCoinLedgerWrapper.OwnedTxo::getReceivedInBlock));
 
-    Map<Long, List<MobileCoinLedgerWrapper.OwnedTxo>> spentInBlock = Stream.of(unknownSpent)
+    Map<Long, List<MobileCoinLedgerWrapper.OwnedTxo>> spentInBlock = StreamUtils.StreamOfCollection(unknownSpent)
                                                                            .filter(MobileCoinLedgerWrapper.OwnedTxo::isSpent)
                                                                            .collect(Collectors.groupingBy(MobileCoinLedgerWrapper.OwnedTxo::getSpentInBlock));
 
-    return Stream.of(allBlocksWithActivity)
+    return StreamUtils.StreamOfCollection(allBlocksWithActivity)
                  .sorted((a, b) -> b.compareTo(a))
                  .flatMap(blockIndex -> {
                    List<MobileCoinLedgerWrapper.OwnedTxo> unspent = MapUtil.getOrDefault(receivedInBlock, blockIndex, Collections.emptyList());
@@ -221,15 +223,17 @@ public final class LedgerReconcile {
                    TransactionReconstruction transactionReconstruction = TransactionReconstruction.estimateBlockLevelActivity(toMobileCoinList(spent), toMobileCoinList(unspent));
 
                    BlockDetail blockDetail = new BlockDetail(blockIndex, timeStamp);
-                   return Stream.of(transactionReconstruction.getAllTransactions())
+                   return StreamUtils.StreamOfCollection(transactionReconstruction.getAllTransactions())
                                 .map(t -> new DetailedTransaction(blockDetail, t));
                  })
-                 .sorted(DetailedTransaction.DESCENDING).collect(Collectors.toList());
+                 .sorted(DetailedTransaction.DESCENDING)
+                 .toList();
   }
 
   private static @NonNull List<Money.MobileCoin> toMobileCoinList(@NonNull List<MobileCoinLedgerWrapper.OwnedTxo> spent) {
-    return Stream.of(spent)
-                 .map(MobileCoinLedgerWrapper.OwnedTxo::getValue).collect(Collectors.toList());
+    return StreamUtils.StreamOfCollection(spent)
+                 .map(MobileCoinLedgerWrapper.OwnedTxo::getValue)
+                 .toList();
   }
 
   public static class BlockOverridePayment extends PaymentDecorator {
