@@ -5,13 +5,13 @@ import android.net.Uri;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.thoughtcrime.securesms.R;
 import org.thoughtcrime.securesms.components.emoji.Emoji;
 import org.thoughtcrime.securesms.components.emoji.EmojiPageModel;
 import org.thoughtcrime.securesms.components.emoji.RecentEmojiPageModel;
+import org.thoughtcrime.securesms.util.StreamUtils;
 
 import java.util.List;
 
@@ -43,7 +43,7 @@ class ThisMessageEmojiPageModel implements EmojiPageModel {
 
   @Override
   public @NonNull List<Emoji> getDisplayEmoji() {
-    return Stream.of(getEmoji()).map(Emoji::new).collect(Collectors.toList());
+    return StreamUtils.StreamOfCollection(getEmoji()).map(Emoji::new).toList();
   }
 
   @Override
