@@ -68,6 +68,7 @@ import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.recipients.RecipientUtil;
 import org.thoughtcrime.securesms.util.ParcelUtil;
 import org.thoughtcrime.securesms.util.SignalLocalMetrics;
+import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.push.DistributionId;
 import org.whispersystems.signalservice.api.util.Preconditions;
 
@@ -297,8 +298,8 @@ public class MessageSender {
       Recipient recipient         = message.getThreadRecipient();
       long      allocatedThreadId = threadTable.getOrCreateValidThreadId(message.getThreadRecipient(), threadId);
 
-      List<AttachmentId> attachmentIds = Stream.of(preUploadResults).map(PreUploadResult::getAttachmentId).collect(com.annimon.stream.Collectors.toList());
-      List<String>       jobIds        = Stream.of(preUploadResults).map(PreUploadResult::getJobIds).flatMap(Stream::of).collect(com.annimon.stream.Collectors.toList());
+      List<AttachmentId> attachmentIds = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getAttachmentId).toList();
+      List<String>       jobIds        = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getJobIds).flatMap(StreamUtils::StreamOfCollection).toList();
 
       if (!attachmentDatabase.hasAttachments(attachmentIds)) {
         Log.w(TAG, "Attachments not found in database for " + message.getThreadRecipient().getId() + ", thread: " + threadId + ", pre-uploads: " + preUploadResults);
@@ -337,16 +338,16 @@ public class MessageSender {
                                         @NonNull Collection<PreUploadResult> preUploadResults,
                                         boolean overwritePreUploadMessageIds)
   {
-    Log.i(TAG, "Sending media broadcast (overwrite: " + overwritePreUploadMessageIds + ") to " + Stream.of(messages).map(m -> m.getThreadRecipient().getId()).collect(com.annimon.stream.Collectors.toList()));
+    Log.i(TAG, "Sending media broadcast (overwrite: " + overwritePreUploadMessageIds + ") to " + StreamUtils.StreamOfCollection(messages).map(m -> m.getThreadRecipient().getId()).toList());
     Preconditions.checkArgument(messages.size() > 0, "No messages!");
-    Preconditions.checkArgument(Stream.of(messages).allMatch(m -> m.getAttachments().isEmpty()), "Messages can't have attachments! They should be pre-uploaded.");
+    Preconditions.checkArgument(StreamUtils.StreamOfCollection(messages).allMatch(m -> m.getAttachments().isEmpty()), "Messages can't have attachments! They should be pre-uploaded.");
 
     JobManager         jobManager                 = AppDependencies.getJobManager();
     AttachmentTable    attachmentDatabase         = SignalDatabase.attachments();
     MessageTable       mmsDatabase                = SignalDatabase.messages();
     ThreadTable        threadTable                = SignalDatabase.threads();
-    List<AttachmentId> preUploadAttachmentIds     = Stream.of(preUploadResults).map(PreUploadResult::getAttachmentId).collect(com.annimon.stream.Collectors.toList());
-    List<String>       preUploadJobIds            = Stream.of(preUploadResults).map(PreUploadResult::getJobIds).flatMap(Stream::of).collect(com.annimon.stream.Collectors.toList());
+    List<AttachmentId> preUploadAttachmentIds     = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getAttachmentId).toList();
+    List<String>       preUploadJobIds            = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getJobIds).flatMap(StreamUtils::StreamOfCollection).toList();
     List<Long>         messageIds                 = new ArrayList<>(messages.size());
     List<String>       messageDependsOnIds        = new ArrayList<>(preUploadJobIds);
     OutgoingMessage    primaryMessage             = messages.get(0);
@@ -370,8 +371,9 @@ public class MessageSender {
         messageIds.add(primaryMessageId);
       }
 
-      List<DatabaseAttachment> preUploadAttachments = Stream.of(preUploadAttachmentIds)
-                                                            .map(attachmentDatabase::getAttachment).collect(com.annimon.stream.Collectors.toList());
+      List<DatabaseAttachment> preUploadAttachments = StreamUtils.StreamOfCollection(preUploadAttachmentIds)
+                                                            .map(attachmentDatabase::getAttachment)
+                                                            .toList();
 
       if (messages.size() > 0) {
         List<OutgoingMessage>    secondaryMessages = overwritePreUploadMessageIds ? messages.subList(1, messages.size()) : messages;
