@@ -12,7 +12,6 @@ import androidx.annotation.Nullable;
 import androidx.appcompat.widget.Toolbar;
 import androidx.viewpager2.widget.ViewPager2;
 
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.thoughtcrime.securesms.PassphraseRequiredActivity;
@@ -26,6 +25,7 @@ import org.thoughtcrime.securesms.util.DynamicNoActionBarTheme;
 import org.thoughtcrime.securesms.util.DynamicTheme;
 import org.thoughtcrime.securesms.util.FullscreenHelper;
 import org.thoughtcrime.securesms.util.Projection;
+import org.thoughtcrime.securesms.util.StreamUtils;
 import org.thoughtcrime.securesms.util.ViewUtil;
 import org.thoughtcrime.securesms.util.WindowUtil;
 import org.thoughtcrime.securesms.util.adapter.mapping.MappingModel;
@@ -81,9 +81,10 @@ public class ChatWallpaperPreviewActivity extends PassphraseRequiredActivity {
     viewPager.setAdapter(adapter);
 
     adapter.submitList(Collections.singletonList(new ChatWallpaperSelectionMappingModel(selected)));
-    repository.getAllWallpaper(wallpapers -> adapter.submitList(Stream.of(wallpapers)
-                                                                      .map(wallpaper -> ChatWallpaperFactory.updateWithDimming(wallpaper, dim ? ChatWallpaper.FIXED_DIM_LEVEL_FOR_DARK_THEME : 0f))
-                                                                      .<MappingModel<?>>map(ChatWallpaperSelectionMappingModel::new).collect(Collectors.toList())));
+    repository.getAllWallpaper(wallpapers -> adapter.submitList(StreamUtils.StreamOfCollection(wallpapers)
+                                                                           .map(wallpaper -> ChatWallpaperFactory.updateWithDimming(wallpaper, dim ? ChatWallpaper.FIXED_DIM_LEVEL_FOR_DARK_THEME : 0f))
+                                                                           .<MappingModel<?>>map(ChatWallpaperSelectionMappingModel::new)
+                                                                      .toList()));
 
     submit.setOnClickListener(unused -> {
       ChatWallpaperSelectionMappingModel model = (ChatWallpaperSelectionMappingModel) adapter.getCurrentList().get(viewPager.getCurrentItem());
